# keystash

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
development_journey/: software_development_life_cycle.md
development_journey/01_planning/: 01_why.md  02_feasibility.md
development_journey/02_requirements_analysis/: 01_functional_requirements.md  02_non_functional_requirements.md
development_journey/03_design/: duplicate_credentials_design.md  rough.md
docs/: needed_features.md  planned_upgrades.md  specification.md
docs/features/: add.md
docs/specification/: v0.1.0.md  v1.0.md
docs/specification/v1.0/: v1.0.md
docs/templates/: feature_documentation_record.md  feature_specification_document.md
plan/: features.md
src/: main.py
src/features/: add.py  get.py  passwd.py  remove.py  search.py
src/toolbox/: storage.py
src/utils/: constants.py  crypto_utils.py  helpers.py  storage.py
tests/: test_main.py
tests/test_features/: test_add.py  test_duplicates_checker.py  test_get.py  test_passwd.py  test_remove.py
tests/test_features/test_add/: test_add.py  test_filter_credentials.py
tests/test_utils/: test_helpers.py  test_storage.py
